# name-finder

./: .gitignore  LICENSE  ner_client.py  pyproject.toml
test/: test_doubles.py  test_ner_client.py
