[tool.poetry]
name = "name-finder"
version = "0.1.0"
description = "A simple NER API"
authors = ["christina"]
packages = [
    { include = "test" },
]

[tool.poetry.dependencies]
python = "^3.9"
spacy = "^3.1.3"
selenium = "^3.141.0"
pytest = "^6.2.5"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
